SMO Algorithm Implemented, version 1 (Platt Paper) (#1)
SMO
* finished SMO implementation, direct copy from Platt paper
* uses mutation inside of the `train` method **only**
* the external predict / calculate margin functionality is side-effect free
* decided to inline predict vs takeStep as predict is called more often + predict has tight loop
* option to do the alpha 2, option #2 heuristic search (re-loop over all alphas to find a good one)
  * by default, disabled as it has worst-case performance of O(n^2) for ONE iteration !! :(
  * experimentally, this search doesn't make a noticeable difference
* result of `train` is a model, containing the support vectors & their alphas

CMD
* train, test, evaluate performance program
* train and benchmark time program
* benchmark loop structures
* benchmark train time on synthetic, dense dataset (also writes-out synth. data in svm-light format)

DATA
* added sample data w/ binary labels:
  * diabetes
  * german.numer
* multi-class data:
  * iris.data
  * micromass
* all from UCI-ML repository

NOTES
* added notes w/ links to resources for SMO understanding
* short notes on SMO from platt paper

TEST
* finished "sanity check" test, using toy dataset, check memorization succeeds

MISC
* doing safe double comparisons in SMO algorithm vectors for non-zero alphas
* SMO algorithm internally caches all kernel evaluations
  * results in DRAMATIC speedup
  * might be useful to have a LRU cache instead of full cache if the dataset cannot fit in memory
  * TODO exploit symmetric nature of kernel cache and implement as a diagonal matrix
    * i.e. kernel(i,j) == kernel(j,i)
* have some NaN checks in the SMO algorithm
  * TODO: investigate why we're getting NaNs here! 
  * can we eliminate them earlier? 
  * can we *safely* replace them with something? 
  * it must occur when we are adjusting alphas...
  * can we roll this NaN checking into something we have and stop it from propagating ?

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 
 
+syntehtic_data_svm-light_fmt
+svm_light_cmp
+model-synth
+
 index-*.html
 plot_data_*
 TESTING/second_experiment_EXPSIZE=500/WORKSPACE/
